@@ -19,7 +19,7 @@
 
   <nz-form-item>
     <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="format">
-      Number format
+      Number format (reload required)
     </nz-form-label>
     <nz-select
       [(ngModel)]="os.numFormat"
